cif/org.eclipse.escet.cif.tests/tests/plcgen/prechecker.cif.plcopen.err
ERROR: CIF PLC code generator failed due to unsatisfied preconditions:

  --------------------------
  (1/8) An equation is used.
  --------------------------
   * In location "X.a":
     - equation q' = -1.0;
                   ^

  ------------------------------------------------------------------
  (2/8) Continuous variable has a derivative that is not -1 or -1.0.
  ------------------------------------------------------------------
   * In automaton "X":
     - cont c = 3.0 der 0.0;
            ^

  -------------------------------------------------------------------------------------------------------------------------------
  (3/8) Continuous variable has its derivative declared through one or more equations, rather than directly with its declaration.
  -------------------------------------------------------------------------------------------------------------------------------
   * In automaton "X":
     - cont q = 0.0;
            ^

  ----------------------------------------------------------------------------------
  (4/8) Continuous variable is assigned a value that cannot be evaluated statically.
  ----------------------------------------------------------------------------------
   * In location "X.a":
     - edge evt when c != 0.0 do c := 1.0 / v;
                                 ^

  ----------------------------------------------------------------------------------------
  (5/8) Continuous variable is initialized to, assigned, or compared to, a negative value.
  ----------------------------------------------------------------------------------------
   * In automaton "X":
     - cont e = -1.0 der -1.0;
            ^
   * In location "X.a":
     - edge evt when c < 0 do c := -25.0;
                              ^
     - edge evt when 0 < c do c := -25.0;
                              ^
     - edge evt when c <= -17;
                     ^

  ------------------------------------------------------
  (6/8) Continuous variable is not assigned or compared.
  ------------------------------------------------------
   * In location "X.a":
     - edge evt when max(c + 5.0, 17.4) <= 28;
                         ^
     - edge evt when abs(c) > 0;
                         ^

  ------------------------------------------------------------------------------------------
  (7/8) Continuous variable value is not compared as "variable <= ..." or "... >= variable".
  ------------------------------------------------------------------------------------------
   * In location "X.a":
     - edge evt when c >= 0 do v := 0.0;
                     ^
     - edge evt when c > 0;
                     ^
     - edge evt when c < 0 do c := -25.0;
                     ^
     - edge evt when 0 > c;
                         ^
     - edge evt when 0 < c do c := -25.0;
                         ^
     - edge evt when 0 <= c;
                          ^
     - edge evt when c != 0.0 do c := 1.0 / v;
                     ^
     - edge evt when c = 0.0 do c := 3.0;
                     ^

  ---------------------------------------
  (8/8) Edge has an implicit 'tau' event.
  ---------------------------------------
   * In location "X.a":
     - edge do v := v + 1.0;
       ^
